# ExocortexCrate

./: .gitignore  CMakeLists.txt  README.md  compile.bat
3DSMax/: Alembic.aps  CMakeLists.txt  alembicExp.def  utility.cpp
3DSMax/MaxScripts/Startup/: Exocortex-Startup.ms
Utils/: CMakeLists.txt
